--- a/february-hot-list/index.html
+++ b/february-hot-list/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Libro - Free Bootstrap 4 Template by Colorlib</title>
+    <title>February hot list: 5 can’t-miss experiences</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
